@@ -86,10 +86,13 @@ $wgTitle = null;
 
 // Do the work
 try {
-	$maintenance->execute();
+	$result = $maintenance->execute();
 } catch( MWException $mwe ) {
 	echo( $mwe->getText() );
+	$result = 1;
 }
 
 // Potentially debug globals
 $maintenance->globals();
+
+exit( intval( $result ) );
